--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "qing-ui",
+  "name": "qing-good-ui",
   "version": "0.0.1",
   "description": "这是一个ui框架",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev-test": "parcel watch test/* --no-cache & karma start",
+    "test": "parcel build test/* --no-cache --no-minify && karma start --single-run"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,27 @@
   },
   "homepage": "https://github.com/zhuxian666/qing-UI#readme",
   "dependencies": {
-    "vue": "^2.6.12"
+    "vue": "^2.6.12",
+    "vue-hot-reload-api": "^2.3.4"
+  },
+  "devDependencies": {
+    "@vue/component-compiler-utils": "^3.2.0",
+    "chai": "^4.3.0",
+    "chai-spies": "^1.0.0",
+    "karma": "^6.1.1",
+    "karma-chai": "^0.1.0",
+    "karma-chai-spies": "^0.1.4",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-mocha": "^2.0.1",
+    "karma-sinon-chai": "^2.0.2",
+    "mocha": "^8.3.0",
+    "parcel-bundler": "^1.12.4",
+    "sass": "^1.32.7",
+    "sinon": "^9.2.4",
+    "sinon-chai": "^3.5.0",
+    "vue-template-compiler": "^2.6.12"
+  },
+  "alias": {
+    "vue": "./node_modules/vue/dist/vue.common.js"
   }
 }
