--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qing-good-ui",
+  "name": "light-ui-demo",
   "version": "0.0.1",
   "description": "这是一个ui框架",
   "main": "index.js",
